syntax = "proto3";

package datadog.workloadfilter;

option go_package = "pkg/proto/pbgo/core"; // golang

message FilterContainer {
  string id = 1;
  string name = 2;
  FilterImage image = 3;
  oneof owner {
    FilterPod pod = 4;
    FilterECSTask ecs_task = 5;
  }
}

message FilterPod {
  string id = 1;
  string name = 2;
  string namespace = 3;
  map<string, string> annotations = 4;
}

message FilterProcess {
  string name = 1;
  string cmdline = 2;
  repeated string args = 3;
  // log_file is only set when the rules are evaluated by the logs component.
  string log_file = 4;
}

message FilterECSTask {
  string id = 1;
  string arn = 2;
  // TODO: Explore task fields to add
}

message FilterKubeService {
  string name = 1;
  string namespace = 2;
  map<string, string> annotations = 3;
}

message FilterKubeEndpoint {
  string name = 1;
  string namespace = 2;
  map<string, string> annotations = 3;
}

message FilterImage {
  string reference = 1;
}
